updated release notes and removed margin top from h1 in mobile

--- a/pages/about.html
+++ b/pages/about.html
@@ -4,7 +4,7 @@ layout: one-col.njk
 permalink: "about.html"
 ---
 
-<h1 class="mt-lg-0">About the State Web Template</h1>
+<h1 class="m-t-0">About the State Web Template</h1>
 
 <nav class="page-navigation"></nav>
 
