--- a/pages/accessibility.html
+++ b/pages/accessibility.html
@@ -4,7 +4,7 @@ layout: one-col.njk
 permalink: "accessibility.html"
 ---
 
-<h1 class="mt-lg-0">Accessibility</h1>
+<h1 class="m-t-0">Accessibility</h1>
 <p>
   The State of California’s website has been developed in compliance with
   Section D of the California Government Code 11135. Code 11135 requires that
