--- a/pages/cdn.html
+++ b/pages/cdn.html
@@ -5,7 +5,7 @@ layout: one-col.njk
 permalink: "cdn.html"
 ---
 
-<h1 class="mt-lg-0">Web State Template CDN</h1>
+<h1 class="m-t-0">Web State Template CDN</h1>
 
 <p>
   A content delivery network (CDN) provides the fast delivery of internet
