--- a/pages/components.html
+++ b/pages/components.html
@@ -5,7 +5,7 @@ layout: components.njk
 permalink: "components.html"
 ---
 
-<h1 class="mt-lg-0">Components</h1>
+<h1 class="m-t-0">Components</h1>
 
 <nav class="page-navigation"></nav>
 
