--- a/pages/conditions-of-use.html
+++ b/pages/conditions-of-use.html
@@ -4,7 +4,7 @@ layout: one-col.njk
 permalink: "conditions-of-use.html"
 ---
 
-<h1 class="mt-lg-0">Conditions of use</h1>
+<h1 class="m-t-0">Conditions of use</h1>
 <h2>Use policy</h2>
 <p>
   Thank you for visiting the State of California’s web site and reviewing our
