--- a/pages/contact-us-form.html
+++ b/pages/contact-us-form.html
@@ -6,7 +6,7 @@ permalink: "contact-us.html"
 
 <script src="https://www.google.com/recaptcha/api.js"></script>
 
-<h1 class="mt-lg-0">Contact us</h1>
+<h1 class="m-t-0">Contact us</h1>
 <p>
   Have a question? Contact us for help with general inquiries, feedback, or
   bugs.
