--- a/pages/contact-us-thankyou.html
+++ b/pages/contact-us-thankyou.html
@@ -5,5 +5,5 @@ permalink: "contact-us-thankyou.html"
 noindex: True
 ---
 
-<h1 class="mt-lg-0">Thank you for your response</h1>
+<h1 class="m-t-0">Thank you for your response</h1>
 <p>We are always happy to get feedback!</p>
