--- a/pages/download-and-setup.html
+++ b/pages/download-and-setup.html
@@ -40,7 +40,7 @@ permalink: "download-and-setup.html"
   </div>
 
   <div class="col-lg-9 p-b-lg">
-    <h1 id="Downloadandsetup" class="mt-lg-0">Download and setup</h1>
+    <h1 id="Downloadandsetup" class="m-t-0">Download and setup</h1>
 
     <nav class="page-navigation"></nav>
 
