--- a/pages/get-started.html
+++ b/pages/get-started.html
@@ -32,7 +32,7 @@ permalink: "get-started.html"
   </div>
 
   <div class="col-lg-9 p-b-lg">
-    <h1 class="mt-lg-0">Get started</h1>
+    <h1 class="m-t-0">Get started</h1>
 
     <p class="lead">
       The State Web Template makes it easier to build digital services to meet
