--- a/pages/patterns.html
+++ b/pages/patterns.html
@@ -5,7 +5,7 @@ layout: patterns.njk
 permalink: "patterns.html"
 ---
 
-<h1 class="mt-lg-0">Patterns</h1>
+<h1 class="m-t-0">Patterns</h1>
 <p class="lead">
   Patterns are reusable combinations of components from our template. They help
   visitors achieve their goals and ensure consistency across experiences.
