--- a/pages/privacy-policy.html
+++ b/pages/privacy-policy.html
@@ -4,7 +4,7 @@ layout: one-col.njk
 permalink: "privacy-policy.html"
 ---
 
-<h1 class="mt-lg-0">Privacy policy</h1>
+<h1 class="m-t-0">Privacy policy</h1>
 <p><span class="bold">Effective 5/23/17</span></p>
 <p>
   The California Department of Technology, which runs CA.gov,&nbsp;is committed
