--- a/pages/sample/alert.html
+++ b/pages/sample/alert.html
@@ -5,7 +5,7 @@ layout: components.njk
 permalink: "components/alert.html"
 ---
 
-<h1 class="mt-lg-0">Alert</h1>
+<h1 class="m-t-0">Alert</h1>
 <nav class="page-navigation"></nav>
 
 <p>
