--- a/pages/sample/blockquote.html
+++ b/pages/sample/blockquote.html
@@ -7,7 +7,7 @@ permalink: "components/blockquote.html"
 
 <style></style>
 
-<h1 class="mt-lg-0">Blockquote</h1>
+<h1 class="m-t-0">Blockquote</h1>
 <nav class="page-navigation"></nav>
 
 <p>A blockquote emphasizes quotes or excerpts related to the page content.</p>
