--- a/pages/sample/card-grid.html
+++ b/pages/sample/card-grid.html
@@ -5,7 +5,7 @@ layout: patterns.njk
 permalink: "patterns/card-grid.html"
 ---
 
-<h1 class="mt-lg-0">Card grid</h1>
+<h1 class="m-t-0">Card grid</h1>
 
 <nav class="page-navigation"></nav>
 
