--- a/pages/sample/colortheme.html
+++ b/pages/sample/colortheme.html
@@ -52,7 +52,7 @@ nocanonical: true
       </nav>
     </div>
     <div class="col-lg-9">
-      <h1 class="mt-lg-0"><span class="insertThemeName"></span></h1>
+      <h1 class="m-t-0"><span class="insertThemeName"></span></h1>
 
       <div class="insertAltText sr-only"></div>
 
