--- a/pages/sample/css-spacing.html
+++ b/pages/sample/css-spacing.html
@@ -46,7 +46,7 @@ permalink: "get-started/css-classes-shortcuts/spacing.html"
   </div>
 
   <div class="col-lg-9 m-b-lg">
-    <h1 class="mt-lg-0">Spacing</h1>
+    <h1 class="m-t-0">Spacing</h1>
 
     <nav class="page-navigation"></nav>
 
