--- a/pages/sample/css-text-accent.html
+++ b/pages/sample/css-text-accent.html
@@ -44,7 +44,7 @@ permalink: "get-started/css-classes-shortcuts/text-accent-colors.html"
   </div>
 
   <div class="col-lg-9 p-b-lg">
-    <h1 class="mt-lg-0">Text accent colors</h1>
+    <h1 class="m-t-0">Text accent colors</h1>
 
     <nav class="page-navigation"></nav>
 
