--- a/pages/sample/css-utility-css-classes.html
+++ b/pages/sample/css-utility-css-classes.html
@@ -44,7 +44,7 @@ permalink: "get-started/css-classes-shortcuts/utility-css-classes.html"
   </div>
 
   <div class="col-lg-9 m-b-lg">
-    <h1 class="mt-lg-0">Utility CSS classes</h1>
+    <h1 class="m-t-0">Utility CSS classes</h1>
 
     <p>
       Use our utility CSS classes to stylize your web elements. Additional
