--- a/pages/sample/eleventy.html
+++ b/pages/sample/eleventy.html
@@ -30,7 +30,7 @@ permalink: "/get-started/eleventy.html"
   </div>
 
   <div class="col-lg-9 p-b-lg">
-    <h1 id="Downloadandsetup" class="mt-lg-0">Eleventy</h1>
+    <h1 id="Downloadandsetup" class="m-t-0">Eleventy</h1>
 
     <nav class="page-navigation"></nav>
 
