--- a/pages/sample/icons.html
+++ b/pages/sample/icons.html
@@ -253,7 +253,7 @@ permalink: "visual-design/icons.html"
     </nav>
   </div>
   <div class="col-lg-9 p-b-lg">
-    <h1 class="mt-lg-0" id="Icons">Icons</h1>
+    <h1 class="m-t-0" id="Icons">Icons</h1>
 
     <nav class="page-navigation"></nav>
 
