--- a/pages/sample/implementation-steps.html
+++ b/pages/sample/implementation-steps.html
@@ -27,7 +27,7 @@ permalink: "/get-started/implementation-steps.html"
   </div>
 
   <div class="col-lg-9 p-b-lg">
-    <h1 id="Downloadandsetup" class="mt-lg-0">Implementation roadmap</h1>
+    <h1 id="Downloadandsetup" class="m-t-0">Implementation roadmap</h1>
 
     <p>
       These are the high-level steps to take when you upgrade to the latest
