--- a/pages/sample/list-of-articles-or-content.html
+++ b/pages/sample/list-of-articles-or-content.html
@@ -5,7 +5,7 @@ layout: patterns.njk
 permalink: "/patterns/list-of-articles-or-content.html"
 ---
 
-<h1 class="mt-lg-0 mb-0">List of articles</h1>
+<h1 class="m-t-0 mb-0">List of articles</h1>
 <p class="subtitle">Other names: News list, report list</p>
 
 <nav class="page-navigation"></nav>
