--- a/pages/sample/navigation-icons.html
+++ b/pages/sample/navigation-icons.html
@@ -26,7 +26,7 @@ navigation: "../modules/nav-icons.html"
     </nav>
   </div>
   <div class="col-lg-9 m-b-lg">
-    <h1 class="mt-lg-0">Icon menu</h1>
+    <h1 class="m-t-0">Icon menu</h1>
     <p>
       Navigation with icons usually appears to the right of the site logo. It
       uses icons from CAGov font library inside of the first level navigation
