--- a/pages/sample/page-navigation.html
+++ b/pages/sample/page-navigation.html
@@ -5,7 +5,7 @@ layout: components.njk
 permalink: "/components/page-navigation.html"
 ---
 
-<h1 class="mt-lg-0">Page navigation</h1>
+<h1 class="m-t-0">Page navigation</h1>
 
 <nav class="page-navigation"></nav>
 
