--- a/pages/sample/progress-tracker.html
+++ b/pages/sample/progress-tracker.html
@@ -5,7 +5,7 @@ layout: patterns.njk
 permalink: "patterns/progress-tracker.html"
 ---
 
-<h1 class="mt-lg-0 m-b-0">Progress tracker</h1>
+<h1 class="m-t-0 m-b-0">Progress tracker</h1>
 <p class="subtitle">Other names: process indicator, step list</p>
 
 <nav aria-labelledby="page-navigation-label" class="page-navigation">
