--- a/pages/sample/side-navigation-sample-level5.html
+++ b/pages/sample/side-navigation-sample-level5.html
@@ -114,7 +114,7 @@ permalink: "/components/side-navigation-sample-level5.html"
     </nav>
   </div>
   <div class="col-lg-9">
-    <h1 class="mt-lg-0">Dessert</h1>
+    <h1 class="m-t-0">Dessert</h1>
 
     <p class="lead">
       In quis placerat quam. Donec at porta massa. Aliquam luctus suscipit
