--- a/pages/sample/social-media-icons.html
+++ b/pages/sample/social-media-icons.html
@@ -5,7 +5,7 @@ layout: components.njk
 permalink: "components/social-media-icons.html"
 ---
 
-<h1 class="mt-lg-0">Social media icons</h1>
+<h1 class="m-t-0">Social media icons</h1>
 
 <nav class="page-navigation"></nav>
 
