--- a/pages/sample/structure-footer.html
+++ b/pages/sample/structure-footer.html
@@ -25,7 +25,7 @@ permalink: "structure/footer.html"
     </nav>
   </div>
   <div class="col-lg-9 m-b-lg">
-    <h1 class="mt-lg-0">Footer</h1>
+    <h1 class="m-t-0">Footer</h1>
     <nav class="page-navigation"></nav>
     <p>
       The footer is a structural component that puts the state's standard footer
