--- a/pages/sample/structure-site-header.html
+++ b/pages/sample/structure-site-header.html
@@ -27,7 +27,7 @@ permalink: "structure/site-header.html"
     </nav>
   </div>
   <div class="col-lg-9 m-b-lg">
-    <h1 class="mt-lg-0">Site header</h1>
+    <h1 class="m-t-0">Site header</h1>
 
     <nav class="page-navigation"></nav>
 
