--- a/pages/sample/structure-site-navigation.html
+++ b/pages/sample/structure-site-navigation.html
@@ -30,7 +30,7 @@ permalink: "structure/site-navigation.html"
   </div>
 
   <div class="col-lg-9 p-b-lg">
-    <h1 class="mt-lg-0">Site navigation</h1>
+    <h1 class="m-t-0">Site navigation</h1>
 
     <nav class="page-navigation"></nav>
 
