--- a/pages/template-updates.html
+++ b/pages/template-updates.html
@@ -5,7 +5,7 @@ layout: one-col.njk
 permalink: "template-updates.html"
 ---
 
-<h1 class="mt-lg-0">Template updates</h1>
+<h1 class="m-t-0">Template updates</h1>
 <p>
   We are continually improving the California State Web Template. View release
   features by date for items that have been added or updated.
@@ -31,6 +31,20 @@ permalink: "template-updates.html"
     </tr>
   </thead>
   <tbody>
+    <tr>
+      <td class="text-bold font-size-16">6.3</td>
+      <td class="font-size-16">10-6-23</td>
+      <td>
+        <ul class="font-size-16">
+          <li>Optimized color scheme files by converting SASS color variables into CSS variables</li>
+          <li>Updated social media icons inside of CaGov icons font library</li>
+          <li>Published Visual Studio integration with Library Manager (LibMan) allowing .Net users to use the State Template NPM package</li>
+          <li>Fixed pagination component</li>
+          <li>Updated starter site content</li>
+          <li>Added statewide alert compoent</li>
+        </ul>
+      </td>
+    </tr>
     <tr>
       <td class="text-bold font-size-16">6.2.1</td>
       <td class="font-size-16">8-24-23</td>
