--- a/pages/sample/accordion.html
+++ b/pages/sample/accordion.html
@@ -5,7 +5,7 @@ layout: components.njk
 permalink: "/components/accordion.html"
 ---
 
-<h1 class="mt-lg-0">Accordion</h1>
+<h1 class="m-t-0">Accordion</h1>
 
 <nav class="page-navigation"></nav>
 
