--- a/pages/sample/banner.html
+++ b/pages/sample/banner.html
@@ -5,7 +5,7 @@ layout: patterns.njk
 permalink: "patterns/banner.html"
 ---
 
-<h1 class="mt-lg-0">Banner</h1>
+<h1 class="m-t-0">Banner</h1>
 
 <nav aria-labelledby="page-navigation-label" class="page-navigation">
   <div id="page-navigation-label" class="label">On this page</div>
