--- a/pages/sample/breadcrumb.html
+++ b/pages/sample/breadcrumb.html
@@ -5,7 +5,7 @@ layout: components.njk
 permalink: "components/breadcrumb.html"
 ---
 
-<h1 class="mt-lg-0">Breadcrumb</h1>
+<h1 class="m-t-0">Breadcrumb</h1>
 
 <nav class="page-navigation"></nav>
 
