--- a/pages/sample/button.html
+++ b/pages/sample/button.html
@@ -5,7 +5,7 @@ layout: components.njk
 permalink: "components/button.html"
 ---
 
-<h1 class="mt-lg-0">Button</h1>
+<h1 class="m-t-0">Button</h1>
 
 <nav class="page-navigation"></nav>
 
