--- a/pages/sample/color.html
+++ b/pages/sample/color.html
@@ -48,7 +48,7 @@ permalink: "visual-design/color.html"
     </nav>
   </div>
   <div class="col-lg-9 mx-auto p-b-lg">
-    <h1 id="Colors" class="mt-lg-0">Colors</h1>
+    <h1 id="Colors" class="m-t-0">Colors</h1>
     <p>
       Color distinguishes the brand of State Web Template websites. Our custom
       color themes help create consistent experiences across products.
