--- a/pages/sample/countdown-timer.html
+++ b/pages/sample/countdown-timer.html
@@ -5,7 +5,7 @@ layout: components.njk
 permalink: "components/countdown-timer.html"
 ---
 
-<h1 class="mt-lg-0">Countdown timer</h1>
+<h1 class="m-t-0">Countdown timer</h1>
 
 <nav class="page-navigation"></nav>
 
