--- a/pages/sample/css-classes-shortcuts.html
+++ b/pages/sample/css-classes-shortcuts.html
@@ -61,7 +61,7 @@ permalink: "get-started/css-classes-shortcuts/"
     </nav>
   </div>
   <div class="col-lg-9 m-b-lg">
-    <h1 class="mt-lg-0">CSS classes shortcuts</h1>
+    <h1 class="m-t-0">CSS classes shortcuts</h1>
     <p>
       The State Web Template uses CSS classes to display a consistent look and
       feel. We provide these so you can easily find and use these classes.
