--- a/pages/sample/executive-profile.html
+++ b/pages/sample/executive-profile.html
@@ -5,7 +5,7 @@ layout: components.njk
 permalink: "components/executive-profile.html"
 ---
 
-<h1 class="mt-lg-0">Executive profile</h1>
+<h1 class="m-t-0">Executive profile</h1>
 
 <nav class="page-navigation"></nav>
 
