--- a/pages/sample/horizontal-separator.html
+++ b/pages/sample/horizontal-separator.html
@@ -5,7 +5,7 @@ layout: components.njk
 permalink: "components/horizontal-separator.html"
 ---
 
-<h1 class="mt-lg-0 mb-0">Horizontal separator</h1>
+<h1 class="m-t-0 mb-0">Horizontal separator</h1>
 <p class="subtitle">Other names: horizontal rule, divider</p>
 
 <nav class="page-navigation"></nav>
