--- a/pages/sample/list-of-articles-or-content-sample.html
+++ b/pages/sample/list-of-articles-or-content-sample.html
@@ -58,7 +58,7 @@ permalink: "/patterns/list-of-articles-or-content-sample.html"
     </nav>
   </div>
   <div class="col-lg-9">
-    <h1 class="mt-lg-0">Page heading</h1>
+    <h1 class="m-t-0">Page heading</h1>
     {% include "../../src/_includes/modules/news-list-extended.html" %}
     <hr class="m-y-lg" />
     <cagov-pagination
