--- a/pages/sample/lists.html
+++ b/pages/sample/lists.html
@@ -5,7 +5,7 @@ layout: components.njk
 permalink: "components/lists.html"
 ---
 
-<h1 class="mt-lg-0">Lists</h1>
+<h1 class="m-t-0">Lists</h1>
 
 <nav class="page-navigation"></nav>
 
