--- a/pages/sample/modal.html
+++ b/pages/sample/modal.html
@@ -5,7 +5,7 @@ layout: components.njk
 permalink: "components/modal.html"
 ---
 
-<h1 class="mt-lg-0 m-b-0">Modal</h1>
+<h1 class="m-t-0 m-b-0">Modal</h1>
 <p class="subtitle">Other names: popup window, overlay, dialog</p>
 
 <nav class="page-navigation"></nav>
