--- a/pages/sample/newsroom-sampe-featured.html
+++ b/pages/sample/newsroom-sampe-featured.html
@@ -44,7 +44,7 @@ permalink: "/patterns/newsroom-featured-banner.html"
     </nav>
   </div>
   <div class="col-lg-9">
-    <h1 class="mt-lg-0">Newsroom</h1>
+    <h1 class="m-t-0">Newsroom</h1>
     {% include "../../src/_includes/modules/news-featured-banner.html" %} {%
     include "../../src/_includes/modules/news-cards.html" %} {% include
     "../../src/_includes/modules/news-list.html" %}
