--- a/pages/sample/newsroom-sampe.html
+++ b/pages/sample/newsroom-sampe.html
@@ -44,7 +44,7 @@ permalink: "/patterns/newsroom-sample.html"
     </nav>
   </div>
   <div class="col-lg-9">
-    <h1 class="mt-lg-0">Newsroom</h1>
+    <h1 class="m-t-0">Newsroom</h1>
 
     <h2>Featured</h2>
     {% include "../../src/_includes/modules/news-list-featured.html" %} {%
