--- a/pages/sample/newsroom.html
+++ b/pages/sample/newsroom.html
@@ -5,7 +5,7 @@ layout: patterns.njk
 permalink: "patterns/newsroom.html"
 ---
 
-<h1 class="mt-lg-0 mb-0">Newsroom</h1>
+<h1 class="m-t-0 mb-0">Newsroom</h1>
 <p class="subtitle">Other names: News landing page</p>
 
 <nav class="page-navigation"></nav>
