--- a/pages/sample/number-counter.html
+++ b/pages/sample/number-counter.html
@@ -5,7 +5,7 @@ layout: components.njk
 permalink: "components/number-counter.html"
 ---
 
-<h1 class="mt-lg-0 m-b-0">Number counter</h1>
+<h1 class="m-t-0 m-b-0">Number counter</h1>
 <p class="subtitle">Other names: number animation</p>
 
 <nav class="page-navigation"></nav>
