--- a/pages/sample/pagination.html
+++ b/pages/sample/pagination.html
@@ -5,7 +5,7 @@ layout: components.njk
 permalink: "components/pagination.html"
 ---
 
-<h1 class="mt-lg-0">Pagination</h1>
+<h1 class="m-t-0">Pagination</h1>
 
 <nav class="page-navigation"></nav>
 
