--- a/pages/sample/parallax.html
+++ b/pages/sample/parallax.html
@@ -5,7 +5,7 @@ layout: components.njk
 permalink: "components/parallax.html"
 ---
 
-<h1 class="mt-lg-0">Parallax</h1>
+<h1 class="m-t-0">Parallax</h1>
 
 <nav class="page-navigation"></nav>
 
