--- a/pages/sample/progress-bar.html
+++ b/pages/sample/progress-bar.html
@@ -5,7 +5,7 @@ layout: components.njk
 permalink: "components/progress-bar.html"
 ---
 
-<h1 class="mt-lg-0">Progress bar</h1>
+<h1 class="m-t-0">Progress bar</h1>
 
 <nav class="page-navigation"></nav>
 
