--- a/pages/sample/side-navigation-sample-level2.html
+++ b/pages/sample/side-navigation-sample-level2.html
@@ -95,7 +95,7 @@ permalink: "/components/side-navigation-sample-level2.html"
     </nav>
   </div>
   <div class="col-lg-9">
-    <h1 class="mt-lg-0">Birthday party</h1>
+    <h1 class="m-t-0">Birthday party</h1>
 
     <p class="lead">
       In quis placerat quam. Donec at porta massa. Aliquam luctus suscipit
