--- a/pages/sample/side-navigation-sample-level3.html
+++ b/pages/sample/side-navigation-sample-level3.html
@@ -108,7 +108,7 @@ permalink: "/components/side-navigation-sample-level3.html"
     </nav>
   </div>
   <div class="col-lg-9">
-    <h1 class="mt-lg-0">Planning</h1>
+    <h1 class="m-t-0">Planning</h1>
 
     <p class="lead">
       In quis placerat quam. Donec at porta massa. Aliquam luctus suscipit
