--- a/pages/sample/side-navigation-sample-level4.html
+++ b/pages/sample/side-navigation-sample-level4.html
@@ -119,7 +119,7 @@ permalink: "/components/side-navigation-sample-level4.html"
     </nav>
   </div>
   <div class="col-lg-9">
-    <h1 class="mt-lg-0">Food and drinks</h1>
+    <h1 class="m-t-0">Food and drinks</h1>
 
     <p class="lead">
       In quis placerat quam. Donec at porta massa. Aliquam luctus suscipit
