--- a/pages/sample/side-navigation-sample-level6.html
+++ b/pages/sample/side-navigation-sample-level6.html
@@ -94,7 +94,7 @@ permalink: "/components/side-navigation-sample-level6.html"
     </nav>
   </div>
   <div class="col-lg-9">
-    <h1 class="mt-lg-0">Birthday Cake</h1>
+    <h1 class="m-t-0">Birthday Cake</h1>
 
     <nav class="page-navigation"></nav>
     <p class="lead">
