--- a/pages/sample/side-navigation-sample.html
+++ b/pages/sample/side-navigation-sample.html
@@ -55,7 +55,7 @@ permalink: "/components/side-navigation-sample.html"
     </nav>
   </div>
   <div class="col-lg-9">
-    <h1 class="mt-lg-0">Types of parties</h1>
+    <h1 class="m-t-0">Types of parties</h1>
 
     <p class="lead">
       In quis placerat quam. Donec at porta massa. Aliquam luctus suscipit
