--- a/pages/sample/side-navigation.html
+++ b/pages/sample/side-navigation.html
@@ -5,7 +5,7 @@ layout: components.njk
 permalink: "/components/side-navigation.html"
 ---
 
-<h1 class="mt-lg-0 m-b-0">Side navigation</h1>
+<h1 class="m-t-0 m-b-0">Side navigation</h1>
 <p class="subtitle">Other names: Left navigation, side menu</p>
 
 <nav class="page-navigation"></nav>
