--- a/pages/sample/structure-mobile-controls.html
+++ b/pages/sample/structure-mobile-controls.html
@@ -29,7 +29,7 @@ permalink: "structure/mobile-controls.html"
     </nav>
   </div>
   <div class="col-lg-9 m-b-lg">
-    <h1 class="mt-lg-0">Mobile controls</h1>
+    <h1 class="m-t-0">Mobile controls</h1>
 
     <nav class="page-navigation"></nav>
 
