--- a/pages/sample/structure-search-featured.html
+++ b/pages/sample/structure-search-featured.html
@@ -32,7 +32,7 @@ search: Featured
 
       <div class="row">
         <div class="col-md-6">
-          <h1 class="mt-lg-0">Featured search</h1>
+          <h1 class="m-t-0">Featured search</h1>
           <p>
             The header above is an example of the featured search bar. It's
             location and size make it a prominent feature on this layout option.
