--- a/pages/sample/structure-search-inactive.html
+++ b/pages/sample/structure-search-inactive.html
@@ -8,7 +8,7 @@ navigation: "../modules/nav-icons.html"
 
 <div class="row">
   <div class="col-md-10 mx-auto">
-    <h1 class="mt-lg-0">Inactive search live example</h1>
+    <h1 class="m-t-0">Inactive search live example</h1>
     <a
       href="/structure/search.html#Inactive-search"
       class="btn btn-outline-primary">
