--- a/pages/sample/structure-search.html
+++ b/pages/sample/structure-search.html
@@ -25,7 +25,7 @@ permalink: "structure/search.html"
     </nav>
   </div>
   <div class="col-lg-9 m-b-lg">
-    <h1 class="mt-lg-0 m-b-0">Search</h1>
+    <h1 class="m-t-0 m-b-0">Search</h1>
     <p class="subtitle">Other names: searchbox, search field</p>
 
     <nav class="page-navigation"></nav>
