--- a/pages/sample/structure-utility-header.html
+++ b/pages/sample/structure-utility-header.html
@@ -29,7 +29,7 @@ permalink: "structure/utility-header.html"
     </nav>
   </div>
   <div class="col-lg-9 m-b-lg">
-    <h1 class="mt-lg-0">Utility header</h1>
+    <h1 class="m-t-0">Utility header</h1>
 
     <nav class="page-navigation"></nav>
 
