--- a/pages/sample/table.html
+++ b/pages/sample/table.html
@@ -5,7 +5,7 @@ layout: components.njk
 permalink: "components/table.html"
 ---
 
-<h1 class="mt-lg-0">Table</h1>
+<h1 class="m-t-0">Table</h1>
 
 <nav class="page-navigation"></nav>
 
