--- a/pages/sample/tabs.html
+++ b/pages/sample/tabs.html
@@ -5,7 +5,7 @@ layout: components.njk
 permalink: "components/tabs.html"
 ---
 
-<h1 class="mt-lg-0">Tabs</h1>
+<h1 class="m-t-0">Tabs</h1>
 
 <nav class="page-navigation"></nav>
 
