--- a/pages/sample/typography.html
+++ b/pages/sample/typography.html
@@ -24,7 +24,7 @@ permalink: "visual-design/typography.html"
     </nav>
   </div>
   <div class="col-lg-9 p-b-lg">
-    <h1 id="Typography" class="mt-lg-0">Typography</h1>
+    <h1 id="Typography" class="m-t-0">Typography</h1>
 
     <nav class="page-navigation"></nav>
 
