--- a/pages/sample/ui-kit.html
+++ b/pages/sample/ui-kit.html
@@ -25,7 +25,7 @@ permalink: "visual-design/ui-kit.html"
     </nav>
   </div>
   <div class="col-lg-9 p-b-lg">
-    <h1 class="mt-lg-0">UI kit</h1>
+    <h1 class="m-t-0">UI kit</h1>
 
 
     <div class="card">
