--- a/pages/structure.html
+++ b/pages/structure.html
@@ -26,7 +26,7 @@ permalink: "structure.html"
     </nav>
   </div>
   <div class="col-lg-9 p-b-lg">
-    <h1 class="mt-lg-0">Structure</h1>
+    <h1 class="m-t-0">Structure</h1>
 
     <nav class="page-navigation"></nav>
 
