--- a/pages/whats-new.html
+++ b/pages/whats-new.html
@@ -31,7 +31,7 @@ permalink: "whats-new.html"
     </nav>
   </div>
   <div class="col-lg-9 p-b-lg">
-    <h1 class="mt-lg-0">What's new in V6</h1>
+    <h1 class="m-t-0">What's new in V6</h1>
 
     <nav class="page-navigation"></nav>
 
