Updated UI kit link (to be  downloaded from CDN)

--- a/pages/sample/ui-kit.html
+++ b/pages/sample/ui-kit.html
@@ -41,7 +41,7 @@ permalink: "visual-design/ui-kit.html"
             <li>Communicate expectations with your developer</li>
             <li>QA/validate after something is developed</li>
           </ul>
-        <a class="btn btn-primary p-x-md m-b" href="/images/CA-State-Web-Template-UI-Kit.zip">Download the UI kit</a>
+        <a class="btn btn-primary p-x-md m-b" href="https://california.azureedge.net/cdt/statetemplate/global/CA-State-Web-Template-UI-Kit.zip">Download the UI kit</a>
       </div>
     </div>
 
