fixing space before period

--- a/pages/sample/social-media-icons.html
+++ b/pages/sample/social-media-icons.html
@@ -100,8 +100,7 @@ permalink: "components/social-media-icons.html"
 </ul>
 <p>
   Browse our
-  <a href="/visual-design/icons.html">State Web Template icons</a>
-  .
+  <a href="/visual-design/icons.html">State Web Template icons</a>.
 </p>
 <h3>How not to use it</h3>
 <p>
