Utility CSS classes period space removal

--- a/pages/sample/css-spacing.html
+++ b/pages/sample/css-spacing.html
@@ -6,7 +6,7 @@ permalink: "get-started/css-classes-shortcuts/spacing.html"
 ---
 
 <div class="row">
- <div class="col-lg-3 pb-lg-5" role="complementary">
+  <div class="col-lg-3 pb-lg-5" role="complementary">
     <!-- Side navigation -->
     <nav aria-labelledby="color-schemes-list" class="side-navigation sticky-6">
       <ul class="list-navigation">
@@ -199,10 +199,9 @@ permalink: "get-started/css-classes-shortcuts/spacing.html"
     </ul>
     <p>
       For more shortcuts, review
-      <a href="/get-started/css-classes-shortcuts/utility-css-classes.html">
-        Utility CSS classes
-      </a>
-      .
+      <a href="/get-started/css-classes-shortcuts/utility-css-classes.html"
+        >Utility CSS classes</a
+      >.
     </p>
 
     <h2>Spacing class shortcuts</h2>
