Live demo of starter site

--- a/pages/download-and-setup.html
+++ b/pages/download-and-setup.html
@@ -139,7 +139,7 @@ permalink: "download-and-setup.html"
           <a
             class="btn btn-outline-primary p-x"
             href="https://office-of-digital-services.github.io/California-State-Web-Template-HTML/">
-            Live demo of starter stie
+            Live demo of starter site
           </a>
         </div>
       </div>
