added more side nav col width for tablets and updated side menu #1603

--- a/pages/cdn.html
+++ b/pages/cdn.html
@@ -1,9 +1,41 @@
 ---
 title: State Web Template CDN
 landing: Get started
-layout: one-col.njk
+layout: page.njk
 permalink: "cdn.html"
 ---
+
+
+
+<div class="row">
+  <div class="col-lg-4 col-xl-3">
+  <nav
+    aria-labelledby="side-navigation-label"
+    class="side-navigation sticky-6 overflow-auto">
+    <span class="sr-only" id="side-navigation-label">Side navigation</span>
+    <ul class="list-navigation">
+      <li>
+        <a href="/download-and-setup.html" class="landing back">
+          Download and setup
+        </a>
+      </li>
+      <li>
+        <a href="/get-started/implementation-steps.html">
+          Implementation roadmap
+        </a>
+        <a href="https://www.npmjs.com/package/@cagovweb/state-template">
+          NPM package
+        </a>
+        <a href="/cdn.html"  class="active">
+          Content delivery network (CDN)
+        </a>
+      </li>
+    </ul>
+  </nav>
+</div>
+
+
+<div class="col-lg-8 col-xl-9">
 
 <h1 class="m-t-0">Web State Template CDN</h1>
 
@@ -1684,3 +1716,7 @@ permalink: "cdn.html"
 </ol>
 
 <hr class="m-b-lg" />
+
+
+</div>
+</div>
