--- a/pages/sample/css-classes-shortcuts.html
+++ b/pages/sample/css-classes-shortcuts.html
@@ -6,7 +6,7 @@ permalink: "get-started/css-classes-shortcuts/"
 ---
 
 <div class="row">
- <div class="col-lg-3 pb-lg-5" role="complementary">
+  <div class="col-lg-4 col-xl-3 pb-lg-5" role="complementary">
     <!-- Side navigation -->
     <nav
       aria-labelledby="page-navigation-label"
@@ -60,7 +60,7 @@ permalink: "get-started/css-classes-shortcuts/"
       </ul>
     </nav>
   </div>
-  <div class="col-lg-9 m-b-lg">
+  <div class="col-lg-8 col-xl-9 m-b-lg">
     <h1 class="m-t-0">CSS classes shortcuts</h1>
     <p>
       The State Web Template uses CSS classes to display a consistent look and
