--- a/pages/sample/eleventy.html
+++ b/pages/sample/eleventy.html
@@ -6,7 +6,7 @@ permalink: "/get-started/eleventy.html"
 ---
 
 <div class="row">
-  <div class="col-lg-3">
+  <div class="col-lg-4 col-xl-3">
     <nav
       aria-labelledby="side-navigation-label"
       class="side-navigation sticky-6 overflow-auto">
@@ -29,7 +29,7 @@ permalink: "/get-started/eleventy.html"
     </nav>
   </div>
 
-  <div class="col-lg-9 p-b-lg">
+  <div class="col-lg-8 col-xl-9 p-b-lg">
     <h1 id="Downloadandsetup" class="m-t-0">Eleventy</h1>
 
     <nav class="page-navigation"></nav>
