--- a/pages/sample/implementation-steps.html
+++ b/pages/sample/implementation-steps.html
@@ -6,7 +6,7 @@ permalink: "/get-started/implementation-steps.html"
 ---
 
 <div class="row">
-  <div class="col-lg-3">
+  <div class="col-lg-4 col-xl-3">
     <nav
       aria-labelledby="side-navigation-label"
       class="side-navigation sticky-6 overflow-auto">
@@ -21,12 +21,18 @@ permalink: "/get-started/implementation-steps.html"
           <a href="/get-started/implementation-steps.html" class="active">
             Implementation roadmap
           </a>
+          <a href="https://www.npmjs.com/package/@cagovweb/state-template">
+            NPM package
+          </a>
+          <a href="/cdn.html">
+            Content delivery network (CDN)
+          </a>
         </li>
       </ul>
     </nav>
   </div>
 
-  <div class="col-lg-9 p-b-lg">
+  <div class="col-lg-8 col-xl-9 p-b-lg">
     <h1 id="Downloadandsetup" class="m-t-0">Implementation roadmap</h1>
 
     <p>
