--- a/pages/sample/list-of-articles-or-content-sample.html
+++ b/pages/sample/list-of-articles-or-content-sample.html
@@ -25,7 +25,7 @@ permalink: "/patterns/list-of-articles-or-content-sample.html"
 </nav>
 
 <div class="row">
-  <div class="col-lg-3">
+  <div class="col-lg-4 col-xl-3">
     <nav aria-label="list navigation" class="side-navigation">
       <ul>
         <li>
@@ -57,7 +57,7 @@ permalink: "/patterns/list-of-articles-or-content-sample.html"
       </ul>
     </nav>
   </div>
-  <div class="col-lg-9">
+  <div class="col-lg-8 col-xl-9">
     <h1 class="m-t-0">Page heading</h1>
     {% include "../../src/_includes/modules/news-list-extended.html" %}
     <hr class="m-y-lg" />
