--- a/pages/sample/newsroom-sampe-featured.html
+++ b/pages/sample/newsroom-sampe-featured.html
@@ -13,7 +13,7 @@ permalink: "/patterns/newsroom-featured-banner.html"
 </nav>
 
 <div class="row">
-  <div class="col-lg-3">
+  <div class="col-lg-4 col-xl-3">
     <nav aria-label="list navigation" class="side-navigation">
       <ul>
         <li><a href="javascript:;" class="landing active">Newsroom</a></li>
@@ -43,7 +43,7 @@ permalink: "/patterns/newsroom-featured-banner.html"
       </ul>
     </nav>
   </div>
-  <div class="col-lg-9">
+  <div class="col-lg-8 col-xl-9">
     <h1 class="m-t-0">Newsroom</h1>
     {% include "../../src/_includes/modules/news-featured-banner.html" %} {%
     include "../../src/_includes/modules/news-cards.html" %} {% include
