--- a/pages/get-started.html
+++ b/pages/get-started.html
@@ -6,7 +6,7 @@ permalink: "get-started.html"
 ---
 
 <div class="row">
-  <div class="col-lg-3">
+  <div class="col-lg-4 col-xl-3">
     <nav
       aria-labelledby="side-navigation-label"
       class="side-navigation sticky-6 overflow-auto">
@@ -31,7 +31,7 @@ permalink: "get-started.html"
     </nav>
   </div>
 
-  <div class="col-lg-9 p-b-lg">
+  <div class="col-lg-8 col-xl-9 p-b-lg">
     <h1 class="m-t-0">Get started</h1>
 
     <p class="lead">
