--- a/pages/sample/article-sample.html
+++ b/pages/sample/article-sample.html
@@ -32,7 +32,7 @@ permalink: "/patterns/article-sample.html"
   </ol>
 </nav>
 <div class="row">
-  <div class="col-lg-3">
+  <div class="col-lg-4 col-xl-3">
     <nav aria-label="list navigation" class="side-navigation">
       <ul>
         <li>
@@ -51,7 +51,7 @@ permalink: "/patterns/article-sample.html"
       </ul>
     </nav>
   </div>
-  <div class="col-lg-9">
+  <div class="col-lg-8 col-xl-9">
     {% include "../../src/_includes/modules/news-article.html" %}
   </div>
 </div>
