--- a/pages/sample/color.html
+++ b/pages/sample/color.html
@@ -6,7 +6,7 @@ permalink: "visual-design/color.html"
 ---
 
 <div class="row">
- <div class="col-lg-3 pb-lg-5" role="complementary">
+  <div class="col-lg-4 col-xl-3 pb-lg-5" role="complementary">
     <!-- Side navigation -->
     <nav aria-labelledby="color-themes-list" class="side-navigation sticky-6">
       <ul class="list-navigation">
@@ -47,7 +47,7 @@ permalink: "visual-design/color.html"
       </ul>
     </nav>
   </div>
-  <div class="col-lg-9 mx-auto p-b-lg">
+  <div class="col-lg-8 col-xl-9 mx-auto p-b-lg">
     <h1 id="Colors" class="m-t-0">Colors</h1>
     <p>
       Color distinguishes the brand of State Web Template websites. Our custom
