--- a/pages/sample/colortheme.html
+++ b/pages/sample/colortheme.html
@@ -19,7 +19,7 @@ nocanonical: true
     </ol>
   </nav>
   <div class="row">
-   <div class="col-lg-3 pb-lg-5" role="complementary">
+    <div class="col-lg-4 col-xl-3 pb-lg-5" role="complementary">
       <!-- Side navigation -->
       <nav aria-labelledby="color-themes-list" class="side-navigation sticky-6">
         <ul class="list-navigation">
@@ -51,7 +51,7 @@ nocanonical: true
         </ul>
       </nav>
     </div>
-    <div class="col-lg-9">
+    <div class="col-lg-8 col-xl-9">
       <h1 class="m-t-0"><span class="insertThemeName"></span></h1>
 
       <div class="insertAltText sr-only"></div>
