--- a/pages/sample/css-spacing.html
+++ b/pages/sample/css-spacing.html
@@ -6,7 +6,7 @@ permalink: "get-started/css-classes-shortcuts/spacing.html"
 ---
 
 <div class="row">
-  <div class="col-lg-3 pb-lg-5" role="complementary">
+  <div class="col-lg-4 col-xl-3 pb-lg-5" role="complementary">
     <!-- Side navigation -->
     <nav aria-labelledby="color-schemes-list" class="side-navigation sticky-6">
       <ul class="list-navigation">
@@ -45,7 +45,7 @@ permalink: "get-started/css-classes-shortcuts/spacing.html"
     </nav>
   </div>
 
-  <div class="col-lg-9 m-b-lg">
+  <div class="col-lg-8 col-xl-9 m-b-lg">
     <h1 class="m-t-0">Spacing</h1>
 
     <nav class="page-navigation"></nav>
