--- a/pages/sample/icons.html
+++ b/pages/sample/icons.html
@@ -234,7 +234,7 @@ permalink: "visual-design/icons.html"
 </script>
 
 <div class="row">
-  <div class="col-lg-3">
+  <div class="col-lg-4 col-xl-3">
     <nav
       aria-labelledby="side-navigation-label"
       class="side-navigation sticky-6 overflow-auto">
@@ -252,7 +252,7 @@ permalink: "visual-design/icons.html"
       </ul>
     </nav>
   </div>
-  <div class="col-lg-9 p-b-lg">
+  <div class="col-lg-8 col-xl-9 p-b-lg">
     <h1 class="m-t-0" id="Icons">Icons</h1>
 
     <nav class="page-navigation"></nav>
