--- a/pages/sample/side-navigation-sample-level3.html
+++ b/pages/sample/side-navigation-sample-level3.html
@@ -36,7 +36,7 @@ permalink: "/components/side-navigation-sample-level3.html"
 </nav>
 
 <div class="row">
-  <div class="col-lg-3">
+  <div class="col-lg-4 col-xl-3">
     <nav aria-label="list navigation" class="side-navigation">
       <ul>
         <li>
@@ -107,7 +107,7 @@ permalink: "/components/side-navigation-sample-level3.html"
       </ul>
     </nav>
   </div>
-  <div class="col-lg-9">
+  <div class="col-lg-8 col-xl-9">
     <h1 class="m-t-0">Planning</h1>
 
     <p class="lead">
