--- a/pages/sample/side-navigation-sample-level6.html
+++ b/pages/sample/side-navigation-sample-level6.html
@@ -60,7 +60,7 @@ permalink: "/components/side-navigation-sample-level6.html"
 </nav>
 
 <div class="row">
-  <div class="col-lg-3">
+  <div class="col-lg-4 col-xl-3">
     <nav aria-label="list navigation" class="side-navigation">
       <ul>
         <li>
@@ -93,7 +93,7 @@ permalink: "/components/side-navigation-sample-level6.html"
       </ul>
     </nav>
   </div>
-  <div class="col-lg-9">
+  <div class="col-lg-8 col-xl-9">
     <h1 class="m-t-0">Birthday Cake</h1>
 
     <nav class="page-navigation"></nav>
