--- a/pages/sample/side-navigation-sample.html
+++ b/pages/sample/side-navigation-sample.html
@@ -20,7 +20,7 @@ permalink: "/components/side-navigation-sample.html"
 </nav>
 
 <div class="row">
-  <div class="col-lg-3">
+  <div class="col-lg-4 col-xl-3">
     <nav aria-label="list navigation" class="side-navigation">
       <ul>
         <li>
@@ -54,7 +54,7 @@ permalink: "/components/side-navigation-sample.html"
       </ul>
     </nav>
   </div>
-  <div class="col-lg-9">
+  <div class="col-lg-8 col-xl-9">
     <h1 class="m-t-0">Types of parties</h1>
 
     <p class="lead">
