--- a/pages/sample/structure-search.html
+++ b/pages/sample/structure-search.html
@@ -6,7 +6,7 @@ permalink: "structure/search.html"
 ---
 
 <div class="row">
- <div class="col-lg-3 pb-lg-5" role="complementary">
+  <div class="col-lg-4 col-xl-3 pb-lg-5" role="complementary">
     <!-- Side navigation -->
     <nav aria-labelledby="navigation-list" class="side-navigation sticky-6">
       <ul class="list-navigation">
@@ -24,7 +24,7 @@ permalink: "structure/search.html"
       </ul>
     </nav>
   </div>
-  <div class="col-lg-9 m-b-lg">
+  <div class="col-lg-8 col-xl-9 m-b-lg">
     <h1 class="m-t-0 m-b-0">Search</h1>
     <p class="subtitle">Other names: searchbox, search field</p>
 
