--- a/pages/sample/structure-utility-header.html
+++ b/pages/sample/structure-utility-header.html
@@ -6,7 +6,7 @@ permalink: "structure/utility-header.html"
 ---
 
 <div class="row">
- <div class="col-lg-3 pb-lg-5" role="complementary">
+  <div class="col-lg-4 col-xl-3 pb-lg-5" role="complementary">
     <!-- Side navigation -->
     <nav aria-labelledby="navigation-list" class="side-navigation sticky-6">
       <ul class="list-navigation">
@@ -28,7 +28,7 @@ permalink: "structure/utility-header.html"
       </ul>
     </nav>
   </div>
-  <div class="col-lg-9 m-b-lg">
+  <div class="col-lg-8 col-xl-9 m-b-lg">
     <h1 class="m-t-0">Utility header</h1>
 
     <nav class="page-navigation"></nav>
