--- a/pages/sample/typography.html
+++ b/pages/sample/typography.html
@@ -6,7 +6,7 @@ permalink: "visual-design/typography.html"
 ---
 
 <div class="row">
- <div class="col-lg-3 pb-lg-5" role="complementary">
+  <div class="col-lg-4 col-xl-3 pb-lg-5" role="complementary">
     <!-- Side navigation -->
     <nav aria-label="Side navigation" class="side-navigation sticky-6">
       <ul class="list-navigation">
@@ -23,7 +23,7 @@ permalink: "visual-design/typography.html"
       </ul>
     </nav>
   </div>
-  <div class="col-lg-9 p-b-lg">
+  <div class="col-lg-8 col-xl-9 p-b-lg">
     <h1 id="Typography" class="m-t-0">Typography</h1>
 
     <nav class="page-navigation"></nav>
