--- a/pages/sample/ui-kit.html
+++ b/pages/sample/ui-kit.html
@@ -8,7 +8,7 @@ permalink: "visual-design/ui-kit.html"
 
 
 <div class="row">
-  <div class="col-lg-3">
+  <div class="col-lg-4 col-xl-3">
     <nav
       aria-labelledby="side-navigation-label"
       class="side-navigation sticky-6 overflow-auto">
@@ -24,7 +24,7 @@ permalink: "visual-design/ui-kit.html"
       </ul>
     </nav>
   </div>
-  <div class="col-lg-9 p-b-lg">
+  <div class="col-lg-8 col-xl-9 p-b-lg">
     <h1 class="m-t-0">UI kit</h1>
 
 
