--- a/pages/whats-new.html
+++ b/pages/whats-new.html
@@ -6,7 +6,7 @@ permalink: "whats-new.html"
 ---
 
 <div class="row">
-  <div class="col-lg-3">
+  <div class="col-lg-4 col-xl-3">
     <nav
       aria-labelledby="side-navigation-label"
       class="side-navigation sticky-6 overflow-auto">
@@ -30,7 +30,7 @@ permalink: "whats-new.html"
       </ul>
     </nav>
   </div>
-  <div class="col-lg-9 p-b-lg">
+  <div class="col-lg-8 col-xl-9 p-b-lg">
     <h1 class="m-t-0">What's new in V6</h1>
 
     <nav class="page-navigation"></nav>
