--- a/pages/sample/implementation-steps.html
+++ b/pages/sample/implementation-steps.html
@@ -21,7 +21,7 @@ permalink: "/get-started/implementation-steps.html"
           <a href="/get-started/implementation-steps.html" class="active">
             Implementation roadmap
           </a>
-          <a href="https://www.npmjs.com/package/@cagovweb/state-template">
+          <a href="/get-started/npm.html">
             NPM package
           </a>
           <a href="/cdn.html">
