--- a/pages/sitemap.html
+++ b/pages/sitemap.html
@@ -29,6 +29,12 @@ permalink: "sitemap.html"
                   Implementation roadmap
                 </a>
               </li>
+              <li class="m-t-sm">
+                <a class="d-block m-y" href="/cdn.html">CDN</a>
+              </li>
+              <li class="m-t-sm">
+                <a class="d-block m-y" href="/get-started/npm.html">NPM package</a>
+              </li>
             </ul>
           </li>
           <li class="m-t-sm">
@@ -62,7 +68,7 @@ permalink: "sitemap.html"
             </ul>
           </li>
         </ul>
-        <a class="d-block m-y" href="/cdn.html">CDN</a>
+        
 
         <h2 class="h3">Structure</h2>
         <a class="d-block m-y" href="/structure.html">Structure</a>
