--- a/pages/cdn.html
+++ b/pages/cdn.html
@@ -23,7 +23,7 @@ permalink: "cdn.html"
         <a href="/get-started/implementation-steps.html">
           Implementation roadmap
         </a>
-        <a href="https://www.npmjs.com/package/@cagovweb/state-template">
+        <a href="/get-started/npm.html">
           NPM package
         </a>
         <a href="/cdn.html"  class="active">
