Fixed typo in Template Updates page

--- a/pages/template-updates.html
+++ b/pages/template-updates.html
@@ -41,7 +41,7 @@ permalink: "template-updates.html"
           <li>Published Visual Studio integration with Library Manager (LibMan) allowing .Net users to use the State Template NPM package</li>
           <li>Fixed pagination component</li>
           <li>Updated starter site content</li>
-          <li>Added statewide alert compoent</li>
+          <li>Added statewide alert component</li>
         </ul>
       </td>
     </tr>
