updated UI kit and NPM pages

--- a/pages/sample/ui-kit.html
+++ b/pages/sample/ui-kit.html
@@ -41,7 +41,7 @@ permalink: "visual-design/ui-kit.html"
             <li>Communicate expectations with your developer</li>
             <li>QA/validate after something is developed</li>
           </ul>
-        <a class="btn btn-primary p-x-md m-b" href="https://california.azureedge.net/cdt/statetemplate/global/CA-State-Web-Template-UI-Kit.zip">Download the UI kit</a>
+        <a class="btn btn-primary p-x-md m-b" href="https://www.figma.com/community/file/1296266765771316349">State Web Template Figma UI kit</a>
       </div>
     </div>
 
@@ -55,7 +55,7 @@ permalink: "visual-design/ui-kit.html"
     <ul>
       <li><span class="bold">Create an account:</span> To use Figma, you have to have an account. You can create a free account or your department can purchase a paid account. </li>
       <li><span class="bold">Log into Figma:</span> You can either use Figma in your browser or you can download a desktop version.</li>
-      <li><span class="bold">Download, import, and open the UI kit: </span> In Figma, select Import on the file you downloaded. Review the different pages in the kit.</li>
+      <li><span class="bold">Download UI kit: </span> Get the <a href="https://www.figma.com/community/file/1296266765771316349">UI kit from Figma</a>.  Review the different pages in the kit.</li>
     </ul>
 
     <p>Figma allows everyone to have a free account (limited options but you’re still able to use the UI kit and prototype). There are also team and enterprise accounts. Check with your department about using Figma.</p>
