--- a/pages/sample/get-started-npm.html
+++ b/pages/sample/get-started-npm.html
@@ -36,11 +36,11 @@ permalink: "/get-started/npm.html"
     <h1 id="Downloadandsetup" class="m-t-0">State Web Template NPM package</h1>
     <nav class="page-navigation"></nav>
     <p>
-      You can use <a href="https://www.npmjs.com/package/@cagovweb/state-template">NPM registry</a> to install the California State Web Template core package that contains all the necessary State Web Template CSS, JavaScript and fonts files.
+      You can use <a href="https://www.npmjs.com/package/@cagovweb/state-template">NPM JS code sharing registry</a>  to install the California State Web Template core package. It contains all the necessary State Web Template CSS, JavaScript, and fonts files.
     </p>
     
     <h2>How this works</h2>
-    <p>NPM package can be used by myltiple frameworks such as React, .NET, eleventy, etc.</p>
+    <p>The NPM package can be used by multiple frameworks such as React, .NET, eleventy, and others.</p>
 
     <h3>React</h3>
     <p>Option 1 - default theme:</p>
@@ -85,7 +85,7 @@ import "@cagovweb/state-template/dist/js/cagov.core.js";
 
 <h3>Eleventy</h3>
 
-    <p>Add following code into your eleventy.js file:</p>
+    <p>Add the following code into your eleventy.js file:</p>
     <pre><code>module.exports = function(eleventyConfig) {
   // Copy state template core files to site output
   eleventyConfig.addPassthroughCopy({
@@ -107,7 +107,7 @@ import "@cagovweb/state-template/dist/js/cagov.core.js";
     
     <h2>Documentation</h2>
     <p>
-      For more information about State Web Template NPM package and its usage, go to <a href="https://www.npmjs.com/package/@cagovweb/state-template">State Web Template NPM package</a> page at NPM registry portal.
+      For more information about the State Web Template NPM package and usage, visit the <a href="https://www.npmjs.com/package/@cagovweb/state-template">State Web Template NPM package</a> page.
     </p>
   </div>
 </div>
