updated CDN page content

--- a/pages/cdn.html
+++ b/pages/cdn.html
@@ -52,17 +52,9 @@ permalink: "cdn.html"
 <h2>How this works</h2>
 <p>
   You can add CSS and JavaScript CDN references to your HTML webpage and they
-  will work the same as internal style sheets or JavaScript files. Add
-  references to the State Web Template CDN stylesheet file into the
-  <code>&lt;link></code>
-  element, inside the webpage's head section. Add JavaScript CDN reference into
-  the
-  <code>&lt;script></code>
-  element and insert that
-  <code>&lt;script></code>
-  element right before the closing
-  <code>&lt;/body></code>
-  tag.
+  will work the same as internal style sheets or JavaScript files. Add those
+  references into
+  the <code>head</code> tag of your webpage.
 </p>
 
 <h2>Examples</h2>
