updated npm link

--- a/pages/sample/implementation-steps.html
+++ b/pages/sample/implementation-steps.html
@@ -163,7 +163,7 @@ permalink: "/get-started/implementation-steps.html"
               You can install the core State Web Template NPM package on your
               project (if your project is supporting node.js setup). You can
               find NPM guidance and more Information on the
-              <a href="https://www.npmjs.com/package/@cagovweb/state-template"
+              <a href="/get-started/npm.html"
                 >State Web Template NPM</a
               >
               page.
