--- a/pages/download-and-setup.html
+++ b/pages/download-and-setup.html
@@ -162,7 +162,7 @@ permalink: "download-and-setup.html"
         <div class="text-left">
           <a
             class="btn btn-outline-primary p-x"
-            href="https://www.npmjs.com/package/@cagovweb/state-template">
+            href="/get-started/npm.html">
             NPM package information
           </a>
         </div>
