Added legacy components page #1554

--- a/pages/sitemap.html
+++ b/pages/sitemap.html
@@ -198,6 +198,7 @@ permalink: "sitemap.html"
             <a href="/components/tabs.html">Tabs</a>
           </li>
         </ul>
+        <a class="d-block m-y" href="/components/legacy-components.html">Legacy components</a>
         <h2 class="h3">Patterns</h2>
         <a class="d-block m-y" href="/patterns.html">Patterns</a>
         <ul>
@@ -215,6 +216,18 @@ permalink: "sitemap.html"
           </li>
           <li class="m-t-sm">
             <a href="/patterns/progress-tracker.html">Progress tracker</a>
+          </li>
+        </ul>
+        <p>Page templates</p>
+        <ul>
+          <li class="m-t-sm">
+            <a href="/patterns/newsroom.html">Newsroom</a>
+          </li>
+          <li class="m-t-sm">
+            <a href="/patterns/list-of-articles-or-content.html">List of articles</a>
+          </li>
+          <li class="m-t-sm">
+            <a href="/patterns/article.html">Article</a>
           </li>
         </ul>
 
