--- a/pages/download-and-setup.html
+++ b/pages/download-and-setup.html
@@ -54,7 +54,7 @@ permalink: "download-and-setup.html"
     <div class="p-a-md p-b-md bg-gray-75 m-b-lg">
       <h3 class="mt-0">State web template frameworks</h3>
       <p>
-        Esseintial state template files without sample content. Choose your
+        Essential state template files without sample content. Choose your
         framework to get started.
       </p>
 
@@ -130,10 +130,7 @@ permalink: "download-and-setup.html"
       <div class="card-body brd-solid-1 brd-gray-200 d-flex flex-column">
         <h3 class="h4 m-b-sm m-t-0">Sample template content and files</h3>
         <p class="m-b">
-          A HTML site containing sample pages with included local references to
-          the State Web Template CSS and JavaScript files. The web pages’ source
-          code contains comments making it easy for the users to identify the
-          structural components and page’s sections.
+          An HTML starter site contains sample pages. These include local references to the State Web Template CSS and JavaScript files. The source code contains comments to easily identify structural components and page sections.
         </p>
         <div class="text-left">
           <a
@@ -155,9 +152,7 @@ permalink: "download-and-setup.html"
       <div class="card-body brd-solid-1 brd-gray-200 d-flex flex-column">
         <h3 class="h4 m-b-sm m-t-0">NPM Package</h3>
         <p class="m-b">
-          You can use NPM registry to install the California State Web Template
-          core package that contains all the necessary State Web Template CSS,
-          JavaScript and fonts files.
+          You can use NPM registry to install the California State Web Template core package. This contains all the necessary State Web Template CSS, JavaScript and fonts files.
         </p>
         <div class="text-left">
           <a
@@ -173,9 +168,7 @@ permalink: "download-and-setup.html"
       <div class="card-body brd-solid-1 brd-gray-200 d-flex flex-column">
         <h3 class="h4 m-b-sm m-t-0">Content delivery network (CDN)</h3>
         <p class="m-b">
-          You can use our CDN links to easily load essential static resources
-          from the template libraries. Using the CDN can reduce latency,
-          increase performance, and provide the fastest site experience.
+          You can use our CDN links to load essential static resources from the template libraries. This can reduce latency, increase performance, and provide the fastest site experience.
         </p>
         <div class="text-left">
           <a class="btn btn-outline-primary p-x" href="/cdn.html">
