--- a/pages/sample/icons.html
+++ b/pages/sample/icons.html
@@ -258,9 +258,7 @@ permalink: "visual-design/icons.html"
     <nav class="page-navigation"></nav>
 
     <p>
-      Icons are visual representations of commands, devices, directories, or
-      common actions. We use CSS classes to customize icon color for
-      compatibility with all popular browsers.
+      Icons are visual representations of commands, devices, directories, or common actions. We use CSS classes to customize icon color. 
     </p>
 
     <h2>How to use icons</h2>
