--- a/pages/structure.html
+++ b/pages/structure.html
@@ -31,12 +31,10 @@ permalink: "structure.html"
     <nav class="page-navigation"></nav>
 
     <p class="lead">
-      Our structural components form the basic structure of a website using the
-      State Web Template. This structure contains elements that connect web
-      pages and can lead to a smooth user experience.
+      Structural components form the basic structure of a website that uses the State Web Template. This structure contains elements that connect the web pages together.
     </p>
     <h2>Webpage structure</h2>
-    <p>The State Web Template uses includes as our main building components.</p>
+    <p>There are six main structural components in the State Web Template.</p>
 
     <!--TABS-->
 
@@ -221,8 +219,7 @@ permalink: "structure.html"
           <div class="p-a">
             <h3 class="h5 m-t-0">Mobile controls</h3>
             <p class="font-size-16 color-black">
-              Mobile Controls are the search and navigation toggle buttons that
-              expand and collapse search and navigation sections in mobile view
+              Expand and collapse search and navigation sections in mobile view.
             </p>
           </div>
         </a>
