--- a/pages/template-updates.html
+++ b/pages/template-updates.html
@@ -65,10 +65,7 @@ permalink: "template-updates.html"
             development
           </li>
           <li>Updated bootstrap version to 5.3</li>
-          <li>
-            Optimized core JavaScript code and placed reference to it in the
-            head tag next to core css references
-          </li>
+          <li>Optimized core JavaScript code and referenced it in the head tag next to core CSS references</li>
           <li>Improved rendering of the site header in mobile view</li>
         </ul>
       </td>
