--- a/pages/get-started.html
+++ b/pages/get-started.html
@@ -35,10 +35,9 @@ permalink: "get-started.html"
     <h1 class="m-t-0">Get started</h1>
 
     <p class="lead">
-      The State Web Template makes it easier to build digital services to meet
-      the needs of Californians. It offers components and templates to help
+      The State Web Template makes it easier to build digital services. It offers components and templates to help
       product teams work more efficiently. Each component and template comes
-      with code to make it easy for you to use them in your project.
+      with code to make it easy for you to use them in your project. This allows us to focus on the needs of Californians.
     </p>
 
     <div class="row">
