--- a/pages/patterns.html
+++ b/pages/patterns.html
@@ -10,10 +10,12 @@ permalink: "patterns.html"
   Patterns are reusable combinations of components from our template. They help
   visitors achieve their goals and ensure consistency across experiences.
 </p>
-<p class="lead">
-  All of the patterns in this section are supported by written guidance and
-  contain code snippets and examples.
-</p>
+<p class="lead">All patterns in this section contain:</p>
+<ul class="lead">
+  <li>Written guidance</li>
+  <li>Code snippets</li>
+  <li>Examples</li>
+</ul>
 
 <h2>All patterns</h2>
 <p>Use these patterns to present a combination of information and images.</p>
