updated homepage and about pages

--- a/pages/about.html
+++ b/pages/about.html
@@ -9,51 +9,35 @@ permalink: "about.html"
 <nav class="page-navigation"></nav>
 
 <p class="lead">
-  The State Web Template is an open source web template maintained by the Office
-  of Digital Services within the Department of Technology. Our components are
-  designed to enhance the user experience and help digital teams create
-  attractive, consistent, and accessible digital products. The State Web
-  Template will always be open source, collaborative and evolving.
+  The State Web Template is an open source web template maintained by the Office of Digital Services within the Department of Technology. Our components are designed to enhance the user experience and help digital teams create attractive, consistent, and accessible digital products. The State Web Template will always be open source, collaborative and evolving.
 </p>
 
 <h2>Why our template matters</h2>
 <p>
-  Digitally connecting Californians to the government services they need has
-  become increasingly more critical. Great design is central to succeeding in
-  that effort. We offer this web template to help make digital information and
-  services easier to use.
+  Digitally connecting Californians to the government services they need has become increasingly more critical. Great design is central to succeeding in that effort. We offer this web template to help make digital information and services easier to use.
 </p>
 
 <h2>Our mission</h2>
 <p>
-  Enhance the delivery of digital services for California residents through user
-  experience design.
+  Enhance the delivery of digital services for California residents through user experience design.
 </p>
 
 <h2>Our vision</h2>
 <p>
-  Create excellent digital state services for California residents that are
-  inclusive, accessible and performant.
+  Create excellent digital state services for California residents that are inclusive, accessible and performant.
 </p>
 
 <h2>History</h2>
 <p>
-  A long time ago, the eServices Office was established to lead statewide
-  initiatives providing leadership in statewide web policy, CA.gov portal and
-  the digital government footprint. We have come a long way but our core vision
-  and mission has not changed.
+  A long time ago, the eServices Office was established to lead statewide initiatives providing leadership in statewide web policy, CA.gov portal and the digital government footprint. We have come a long way but our core vision and mission has not changed.
 </p>
 <p>
-  The creation of a statewide web template was a strategy and framework to align
-  on California's digital touchpoint. The state web template has evolved from a
-  technical toolset to a digital standard and tactical playbook on delivering
-  useful, accessible, and performant user experiences.
+  The creation of a statewide web template was a strategy and framework to align on California's digital touchpoint. The state web template has evolved from a technical toolset to a digital standard and tactical playbook on delivering useful, accessible, and performant user experiences.
 </p>
 
 <h2>Looking ahead</h2>
 <p>
-  Over the years, and with each state web template release, we've improved the
-  access of online government services with:
+  Over the years, and with each state web template release, we've improved the access of online government services with:
 </p>
 <ul>
   <li>Updated best practices</li>
@@ -62,12 +46,5 @@ permalink: "about.html"
   <li>Improved performance</li>
 </ul>
 <p>
-  Version 6 of the State Web Template gets us one step closer to a production
-  version of the
-  <a href="https://designsystem.webstandards.ca.gov/">
-    California Design System
-  </a>
-  . We are excited to iterate on our digital toolset and evolve the state
-  template to a design standard for California. We want to improve the digital
-  experience of Californians and improve how we partner with State agencies.
+  Version 6 of the State Web Template is this last state template. We’ve updated and provided guidance on the design and technology. Now, we’re developing the California Design System Eureka. Eureka is expected to release at the end-2024. It uses what we’ve learned from the State Web Template and the beta version of the California Design System. We strive to improve the digital experience of Californians and our partnership with State agencies.
 </p>
