updated to v6.3.1-beta3

--- a/pages/sample/structure-utility-header.html
+++ b/pages/sample/structure-utility-header.html
@@ -49,6 +49,9 @@ permalink: "structure/utility-header.html"
         The text “Official website of the State of California” (on desktop) or
         “State of California” (on mobile)
       </li>
+      <li>
+        Optional utility header links
+      </li>
     </ul>
 
     <h2>Sample</h2>
