Special side-by-side compare

--- a/pages/index2.html
+++ b/pages/index2.html
@@ -1,7 +1,8 @@
 ---
-title: nofonts - California State Web Template
+title: original - California State Web Template
 layout: landing.njk
 customcss: /css/homepage.css
+specialcss: true
 ---
 
 {% include "../src/_includes/modules/header-primary-banner.html" %} {% include
