Revert "Special side-by-side compare"

--- a/pages/index.html
+++ b/pages/index.html
@@ -1,5 +1,5 @@
 ---
-title: nofonts - California State Web Template
+title: California State Web Template
 layout: landing.njk
 customcss: /css/homepage.css
 ---
